<resources>
    <string name="app_name">UserProfile</string>

    <string name="user_id">User ID</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">EMail Address</string>
    <string name="surname">Surname</string>
    <string name="first_name">First Name</string>
    <string name="phone">Phone Number</string>
    <string name="empty"> </string>
</resources>